--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5251296221751234"
+<head>
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5251296221751234"
      crossorigin="anonymous"></script>
+</head>
 HelloBworld
